# satellite-land-classification-dl

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  run.py  specifikacija.txt
.github/: copilot-instructions.md
.github/instructions/: project-docs.instructions.md  python-architecture.instructions.md
.github/workflows/: ci.yml
artifacts/reports/: baseline_vs_efficientnet_b0.md  efficientnet_b0_metrics.json
artifacts/splits/: split_manifest.json
configs/: baseline.example.json  baseline.minimal.json  baseline.smoke.json  baseline_cnn.json  baseline_cnn_full.json  efficientnet_b0.stage1.json  efficientnet_b0.stage1.optimized.json  efficientnet_b0.stage2.json  efficientnet_b0.stage2.optimized.json  experiment.defaults.json  resnet50.stage1.json  resnet50.stage1.optimized.json  resnet50.stage2.json  resnet50.stage2.optimized.json  resnet50.template.json
data/: README.md
docs/: EuroSAT_klasifikacija_Milanovic_Zivanic.docx  change_log_kaggle_vs_local.md  evaluation_protocol.md  experiments_log.md  report.md  report_sr.md  resnet50_integration_contract.md  specifikacija.txt
notebooks/: eurosat_baseline_kaggle.ipynb  eurosat_efficientnet_kaggle.ipynb  eurosat_resnet50_kaggle.ipynb
results/: eurosat-baseline.ipynb  eurosat-efficientnet.ipynb  eurosat-resnet.ipynb
results/final/: efficientnet_b0_final_full.json
tests/: test_baseline_engine_components.py  test_cli.py  test_config_loader.py  test_dataset_index.py  test_metrics_calculator.py  test_report_writer.py  test_splitter.py  test_training_orchestrator.py  test_training_smoke.py
(+77 files in other folders)
